Fix: Add overflow hidden to the home-hero (#352)

--- a/blocks/home-hero/home-hero.css
+++ b/blocks/home-hero/home-hero.css
@@ -13,6 +13,7 @@
   z-index: 1;
   max-width: 75rem;
   margin: auto;
+  overflow: hidden;
 }
 
 .home-hero.block > div:first-child {
